# OpenFileManager

./: .gitignore  ApplicationAPI.h  CMakeLists.txt  FileOperations.cpp  FileOperations.h  FilePanel.cpp  FilePanel.h  FilePluginInterface.h  LICENSE  README.md  mainwindow.cpp  mainwindow.h  resources.qrc
.github/workflows/: release.yml
plugins/: CMakeLists.txt
plugins/ExamplePlugin/: CMakeLists.txt  examplePlugin.cpp  examplePlugin.h
plugins/FileOperationsBtn/: CMakeLists.txt  FileOperations.cpp  FileOperations.h  FileOperationsBtn.cpp  FileOperationsBtn.h
src/app/: FilePanel.cpp  FilePanel.h  FileView.hpp  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: ApplicationAPI.h  BelkinExport.h  CopySignals.cpp  CopySignals.h  CopyWorkerCore.cpp  CopyWorkerCore.h  FileOpType.h  FileOperations.cpp  FileOperations.h  FilePluginInterface.cpp  FilePluginInterface.h  resources.qrc
src/plugins/: CMakeLists.txt
src/plugins/CopyPlugin/: CMakeLists.txt  CopyPlugin.cpp  CopyPlugin.h  CopyProgressDialog.hpp
src/plugins/DuplicateFinder/: CMakeLists.txt  DuplicateFinderPlugin.cpp  DuplicateFinderPlugin.hpp
src/plugins/DuplicateFinder/UI/: DuplicateFinderDialog.cpp  DuplicateFinderDialog.hpp  DuplicateResultModel.cpp  DuplicateResultModel.hpp
src/plugins/DuplicateFinder/core/: duplicate_finder.cpp  duplicate_finder.hpp  utils.cpp  utils.hpp
src/plugins/ExamplePlugin/: CMakeLists.txt  examplePlugin.cpp  examplePlugin.h
src/plugins/FileOperationsBtn/: CMakeLists.txt  FileOperationsBtn.cpp  FileOperationsBtn.h
